--- a/package.json
+++ b/package.json
@@ -47,7 +47,10 @@
     "audio-decode": "^2.1.3",
     "axios": "^1.3.3",
     "cache-manager": "4.0.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "futoin-hkdf": "^1.5.1",
+    "helmet": "^7.1.0",
     "libphonenumber-js": "^1.10.20",
     "libsignal": "github:adiwajshing/libsignal-node",
     "music-metadata": "^7.12.3",
